maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:4: error: illegal start of simple expression
    var r:int =random3()
    ^