maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (porteBiscuit()==false)
  	var r:int =random3()
    if (r==0&&estFaceMur==false) {
      avance()
    } 
  	else if (r==1) {
    	gauche()
  	}
  	else { 
      droite()
    }
  	if (estSurBiscuit()==true) {
      prendBiscuit()
    }
}